minha contribuicao ao projeto

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,6 +1,11 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    text-decoration: none;
+}
+
+a {
+    color: #fff;
 }
 
 body {
